
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {scalar_t__ next; struct TYPE_5__* prev; void* val; } ;
typedef TYPE_1__ node ;
struct TYPE_6__ {int size; TYPE_1__* back; } ;
typedef TYPE_2__ list ;


 int free (TYPE_1__*) ;

void *list_pop(list *l){
    if(!l->back) return 0;
    node *b = l->back;
    void *val = b->val;
    l->back = b->prev;
    if(l->back) l->back->next = 0;
    free(b);
    --l->size;

    return val;
}
